--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,18 @@ node*/
 docker/cockroach
 build
 abi
+
+# Truffle
+build
+
+# Node
+node_modules
+package-lock.json
+
+# Mac specific
+.DS_Store
+
+# Logs
+logs
+*.log
+npm-debug.log*
